--- a/public/index.html
+++ b/public/index.html
@@ -133,6 +133,9 @@
                     <div class="form-group">
                         <label for="symposium-description">Description</label>
                         <textarea id="symposium-description" rows="4" required placeholder="Describe the goal and context of this symposium..."></textarea>
+                        <div class="description-actions">
+                            <button type="button" class="btn btn-secondary btn-small" id="generate-tasks-btn">🎯 Generate Tasks</button>
+                        </div>
                     </div>
                     <div class="form-actions">
                         <button type="button" class="btn btn-secondary" id="cancel-symposium">Cancel</button>
@@ -235,6 +238,7 @@
     <script src="components/credit-manager.js"></script>
     <script src="components/airtable-config.js"></script>
     <script src="components/knowledge-base.js"></script>
+    <script src="components/task-manager.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
