--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,36 @@
                     </div>
                 </div>
 
+                <!-- Objectives Section -->
+                <div class="section collapsible">
+                    <div class="section-header" data-section="objectives">
+                        <h3>Objectives</h3>
+                        <button class="collapse-toggle" aria-label="Toggle section">
+                            <span class="collapse-icon">▼</span>
+                        </button>
+                    </div>
+                    <div class="section-content" id="objectives-content">
+                        <div id="objectives-list" class="objectives-list">
+                            <p class="empty-state">Create a symposium first</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Active Objective -->
+                <div class="section collapsible">
+                    <div class="section-header" data-section="active-objective">
+                        <h3>Active Objective</h3>
+                        <button class="collapse-toggle" aria-label="Toggle section">
+                            <span class="collapse-icon">▼</span>
+                        </button>
+                    </div>
+                    <div class="section-content" id="active-objective-content">
+                        <div id="active-objective" class="active-objective">
+                            <p class="empty-state">Select an objective</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Consultants Section -->
                 <div class="section collapsible">
                     <div class="section-header" data-section="consultants">
@@ -119,7 +149,7 @@
     <!-- Modals -->
     <!-- Create Symposium Modal -->
     <div id="symposium-modal" class="modal">
-        <div class="modal-content">
+        <div class="modal-content modal-large">
             <div class="modal-header">
                 <h2>Create Symposium</h2>
                 <button class="close-btn">&times;</button>
@@ -134,9 +164,20 @@
                         <label for="symposium-description">Description</label>
                         <textarea id="symposium-description" rows="4" required placeholder="Describe the goal and context of this symposium..."></textarea>
                         <div class="description-actions">
-                            <button type="button" class="btn btn-secondary btn-small" id="generate-tasks-btn">🎯 Generate Tasks</button>
+                            <button type="button" class="btn btn-secondary btn-small" id="generate-tasks-btn">🎯 Generate Structure</button>
                         </div>
                     </div>
+                    
+                    <!-- Generated Structure Preview -->
+                    <div id="structure-preview" class="structure-preview" style="display: none;">
+                        <div class="form-group">
+                            <label>Generated Objectives & Tasks</label>
+                            <div id="objectives-preview" class="objectives-preview">
+                                <!-- Generated objectives will be displayed here -->
+                            </div>
+                        </div>
+                    </div>
+                    
                     <div class="form-actions">
                         <button type="button" class="btn btn-secondary" id="cancel-symposium">Cancel</button>
                         <button type="submit" class="btn btn-primary">Create</button>
@@ -232,6 +273,7 @@
     <script src="https://cdn.jsdelivr.net/npm/marked@12.0.2/lib/marked.umd.js"></script>
     <script src="utils/api.js"></script>
     <script src="components/symposium-manager.js"></script>
+    <script src="components/objective-manager.js"></script>
     <script src="components/consultant-manager.js"></script>
     <script src="components/chat-interface.js"></script>
     <script src="components/message-manager.js"></script>
