new consultant structure with api

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Symposium - Dynamic Context Management</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/consultant-form.css">
+    <link rel="stylesheet" href="styles/consultant-templates.css">
 </head>
 <body>
     <div class="app-container">
@@ -319,6 +321,8 @@
     <script src="components/message-manager.js"></script>
     <script src="components/credit-manager.js"></script>
     <script src="components/airtable-config.js"></script>
+    <script src="components/consultant-form-interface.js"></script>
+    <script src="components/consultant-type-selector.js"></script>
     <script src="components/knowledge-base.js"></script>
     <script src="app.js"></script>
 </body>
