--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
         <header class="app-header">
             <div class="header-content">
                 <div class="header-title">
-                    <h1>🎭 Symposium</h1>
+                    <!-- <h1>🎭 Symposium</h1> -->
+                     <img src="/media/images/Symposium-removebg-preview.png" alt="" class="header_logo">
                 </div>
                 <div id="credit-display" class="credit-display">
                     <div class="credit-info">
