removed llms from airtable consultant

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styles/consultant-form.css">
     <link rel="stylesheet" href="styles/consultant-templates.css">
+    <link rel="stylesheet" href="styles/airtable-query-builder.css">
 </head>
 <body>
     <div class="app-container">
@@ -322,6 +323,7 @@
     <script src="components/message-manager.js"></script>
     <script src="components/credit-manager.js"></script>
     <script src="components/airtable-config.js"></script>
+    <script src="components/airtable-query-builder.js"></script>
     <script src="components/consultant-form-interface.js"></script>
     <script src="components/consultant-type-selector.js"></script>
     <script src="components/knowledge-base.js"></script>
