--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/consultant-form.css">
     <link rel="stylesheet" href="styles/consultant-templates.css">
     <link rel="stylesheet" href="styles/airtable-query-builder.css">
+    <link rel="stylesheet" href="styles/enhanced-markdown.css">
 </head>
 <body>
     <div class="app-container">
@@ -447,6 +448,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/marked@12.0.2/lib/marked.umd.js"></script>
+    <script src="components/enhanced-markdown-renderer.js"></script>
     <script src="utils/api.js"></script>
     <script src="components/symposium-manager.js"></script>
     <script src="components/objective-manager.js"></script>
